Change names and meta to Ubiq

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Token lists",
-  "name": "Ethereum token lists",
+  "name": "Ubiq token lists",
   "icons": [
     {
       "src": "logo.png",
